2001-01-06  Gary Houston  <ghouston@arglist.com>

	* rw.scm (generic-read-string!/partial, read-string!/partial):
	removed, since this version wasn't correct but it's now in
	guile-core.
	* README: "upgraded" the guile-core dependency to tomorrows
	CVS version.

2001-01-01  Gary Houston  <ghouston@arglist.com>

	* lib/string-lib.scm (string-unfold-right, join-strings,
	string-take-right, string-drop-right): 	don't export, since they are
	not defined.

2000-12-06  Gary Houston  <ghouston@arglist.com>

	* init.scm: load (scsh fdports)
	* scsh.scm (stringify): export.
	* Makefile.am (pkgdata_DATA): add fdports.scm.
	* fdports.scm: new file from scsh 0.5.2, with definitions already
	provided by libguile removed.
	* syntax-helpers.scm: export transcribe-process-form.
	use module (scsh utilities) for check-arg.
	* syntax.scm (scsh): don't use (scsh scsh) module, there are
	mutual dependency problems.  code generated by macros in
	syntax.scm will still need (scsh scsh).

2000-12-04  Gary Houston  <ghouston@arglist.com>

	* scsh.scm: define module (scsh scsh).
	(command-line-arguments): define directly here instead of in init.scm.
	(init-scsh-vars): call here instead of in init.scm.
	(exit): removed, use Guile definition.

	* syscalls.scm (define-errno-syscall): don't export
	* network.scm: define module (scsh network).
	(define-errno-syscall): copied from syscalls.scm.
	* netconst.scm: define module (scsh netconst).
	(maybe-define, maybe-define-so): export the generated definitions.
	* fr.scm: define module (scsh fr).
	* awk.scm: define module (scsh awk).
	* newports.scm: define module (scsh newports).
	* time.scm: define module (scsh time).
	* filesys.scm: define module (scsh filesys).
	rename-file: use guile primitive rename-file instead of
	%rename-file.
	* filemtch.scm: file removed.  it's deprecated/obsolete/broken.
	* glob.scm: define module (scsh glob).
	* fileinfo.scm: define module (scsh fileinfo).
	* syntax.scm: define module (scsh syntax).