@@ -3,6 +3,7 @@
 
 (define-module (scsh awk)
   :use-module (ice-9 receive)
+  :use-module (scsh rdelim)
   :use-module (scsh utilities)
   :use-module (scsh alt-syntax)
   :use-module (scsh rx parse)
