@@ -1,3 +1,9 @@
+2001-01-24  Gary Houston  <ghouston@arglist.com>
+
+	* rdelim.scm: use module (ice-9 rdelim).
+	export %read-delimited!.
+        * awk.scm, scsh.scm: use module (scsh rdelim).
+
 2001-01-06  Gary Houston  <ghouston@arglist.com>
 
 	* rw.scm (generic-read-string!/partial, read-string!/partial):
